@startuml

title __SUPERVISION's Class Diagram__\n

  package  {
    package servlets.Supervision {
      class EditSupervisionServlet {
          # doPost()
          # doGet()
      }
    }
  }
  

  package  {
    package servlets.Supervision {
      class SupervisionServlet {
          {static} - serialVersionUID : long
          # service()
          - verification()
      }
    }
  }
  

  EditSupervisionServlet -up-|> HttpServlet
  SupervisionServlet -up-|> HttpServlet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
